# agente-tjms

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/systemd/: agente-tjms.env.example  alerta.sh  alerta@.service  coletor.service  coletor.timer  rastreador.service  rastreador.timer  relatorio.service  relatorio.timer
docs/: SESSION_LOG.md  api_tjms.md
scripts/: init_db.py  run-via-task-scheduler.sh
src/agente_tjms/: __main__.py  cli.py  client.py  coletor_pauta.py  config.py  db.py  rastreador_acordao.py  relatorio.py  relatorio_docx.py  telegram.py
tests/: test_client.py  test_rastreador_acordao.py  test_relatorio.py  test_relatorio_docx.py  test_telegram.py
tests/fixtures/: cposg_proc_julgado.html  cposg_proc_segredo.html  cposg_proc_tramite.html  orgaos.json  processo_em_pauta_sample.json
