[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agente-tjms"
version = "0.1.0"
description = "Coletor de pautas e acórdãos dos órgãos criminais do TJMS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "tenacity>=8.5",
    "python-dateutil>=2.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "python-dotenv>=1.0",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "ruff>=0.6",
]

[project.scripts]
agente-tjms = "agente_tjms.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agente_tjms"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
